Bug 512543 - yaml and less files have text colors that do not have enough contrast when selected

--- a/bundles/org.eclipse.orion.client.editor/web/orion/editor/themes/default.css
+++ b/bundles/org.eclipse.orion.client.editor/web/orion/editor/themes/default.css
@@ -14,7 +14,7 @@
 }
 
 .entity.name {
-	color: #98937B;
+	color: #7D7755;
 }
 
 .entity.other.attribute.name {
@@ -95,5 +95,5 @@ markup.raw.html.markdown {
 }
 
 .variable.other {
-	color: #E038AD;
+	color: #DB0FA6;
 }
